ember-bdi/tests/macros/compile-fail/percept_missing_into_literal.rs
extern crate alloc;
use ember::agent::bdi::sensor::Percept;

#[derive(Percept)]
struct NotLiteral;

fn main() {}
